--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Ktor App
+name: CI/CD Ktor App
 
 on:
   push:
@@ -11,22 +11,10 @@ env:
   DB_PORT: 5432
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        ports: [5432:5432]
-        env:
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+  🔧 build:
+    name: 🔧 Build
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
@@ -60,11 +48,78 @@ jobs:
       - name: Build JAR
         run: ./gradlew clean shadowJar --no-daemon
 
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ktor-app
+          path: build/libs/*.jar
+
+  🧪 test:
+    name: 🧪 Test
+    runs-on: ubuntu-latest
+    needs: build
+
+    services:
+      postgres:
+        image: postgres:15
+        ports: [5432:5432]
+        env:
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Download built JAR
+        uses: actions/download-artifact@v3
+        with:
+          name: ktor-app
+          path: build/libs/
+
       - name: Run tests
         run: ./gradlew test --no-daemon
 
-      - name: Build Docker image
-        run: docker build -t ktor-app .
+  🚀 deploy:
+    name: 🚀 Deploy to Server
+    runs-on: ubuntu-latest
+    needs: test
 
-      - name: Run docker-compose (optional)
-        run: docker-compose up -d
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Deploy via SSH
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+            set -e
+
+            echo "🔁 Переход в директорию проекта"
+            cd ~/my-ktor-project
+
+            echo "🛑 Останавливаем старые контейнеры"
+            docker-compose down
+
+            echo "📦 Обновляем код"
+            git pull origin main
+
+            echo "🐳 Собираем и запускаем всё заново"
+            docker-compose up -d --build
+          EOF
