--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
 
-  🔧 build:
+  build:
     name: 🔧 Build
     runs-on: ubuntu-latest
 
@@ -54,7 +54,7 @@ jobs:
           name: ktor-app
           path: build/libs/*.jar
 
-  🧪 test:
+  test:
     name: 🧪 Test
     runs-on: ubuntu-latest
     needs: build
@@ -92,7 +92,7 @@ jobs:
       - name: Run tests
         run: ./gradlew test --no-daemon
 
-  🚀 deploy:
+  deploy:
     name: 🚀 Deploy to Server
     runs-on: ubuntu-latest
     needs: test
