--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
            ./gradlew test --no-daemon
 
   deploy:
-    name: 🚀 Deploy to Server
+    name: 🚀 Deploy
     runs-on: ubuntu-latest
     needs: test
 
