--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,9 @@
-name: CI/CD Ktor App
+name: Ktor CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
-
-env:
-  DB_HOST: postgres
-  DB_PORT: 5432
 
 jobs:
 
@@ -17,40 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: ⬇️ Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: 🛠 Set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: 17
 
-      - name: Cache Gradle
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: ${{ runner.os }}-gradle-
+      - name: ✅ Make gradlew executable
+        run: chmod +x ./gradlew
 
-      - name: Generate .env file
-        run: |
-          echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" > .env
-          echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
-          echo "DB_HOST=postgres" >> .env
-          echo "DB_PORT=5432" >> .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+      - name: 🧪 Build app
+        run: ./gradlew clean shadowJar --no-daemon
 
-      - name: Build JAR
-        run: |
-          chmod +x ./gradlew 
-          ./gradlew clean shadowJar --no-daemon
-
-      - name: Upload JAR artifact
+      - name: 📦 Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ktor-app
@@ -65,7 +42,7 @@ jobs:
       postgres:
         image: postgres:15
         ports:
-            - "5432:5432"
+          - "5432:5432"
         env:
           POSTGRES_DB: ${{ secrets.DB_NAME }}
           POSTGRES_USER: ${{ secrets.DB_USER }}
@@ -77,54 +54,84 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout repo
+      - name: ⬇️ Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: 🧪 Set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: 17
 
-      - name: Download built JAR
+      - name: ✅ Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: 📄 Generate .env from template
+        run: |
+          cp .env.template .env
+          sed -i "s|\$MEXC_API_KEY|${{ secrets.MEXC_API_KEY }}|g" .env
+          sed -i "s|\$MEXC_SECRET_KEY|${{ secrets.MEXC_SECRET_KEY }}|g" .env
+          sed -i "s|\$DB_HOST|postgres|g" .env
+          sed -i "s|\$DB_PORT|5432|g" .env
+          sed -i "s|\$DB_NAME|${{ secrets.DB_NAME }}|g" .env
+          sed -i "s|\$DB_USER|${{ secrets.DB_USER }}|g" .env
+          sed -i "s|\$DB_PASSWORD|${{ secrets.DB_PASSWORD }}|g" .env
+
+      - name: 🧪 Run tests
+        run: ./gradlew test --no-daemon
+
+  deploy:
+    name: 🚀 Deploy to Server
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: ⬇️ Download artifact
         uses: actions/download-artifact@v4
         with:
           name: ktor-app
           path: build/libs/
 
-      - name: Run tests
+      - name: 🔐 Setup SSH
         run: |
-           chmod +x ./gradlew 
-           ./gradlew test --no-daemon
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-  deploy:
-    name: 🚀 Deploy
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.7.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Deploy via SSH
+      - name: 🚀 Deploy via SSH
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             set -e
+            cd ~/my-ktor-project || {
+              echo "📦 Клонируем репозиторий..."
+              git clone git@github.com:${{ github.repository }} ~/my-ktor-project
+              cd ~/my-ktor-project
+            }
 
-            echo "🔁 Переход в директорию проекта"
-            cd ~/my-ktor-project
-
-            echo "🛑 Останавливаем старые контейнеры"
-            docker-compose down
-
-            echo "📦 Обновляем код"
+            echo "🔁 Pull latest changes"
+            git reset --hard
             git pull origin main
 
-            echo "🐳 Собираем и запускаем всё заново"
+            echo "🛑 Останавливаем контейнеры"
+            docker-compose down || true
+
+            echo "🧹 Чистим старые билды"
+            rm -f app.jar
+
+            echo "⬆️ Копируем новый JAR"
+            exit
+          EOF
+
+      - name: ⬆️ Copy JAR to server
+        run: |
+          scp -i ~/.ssh/deploy_key build/libs/*.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/my-ktor-project/app.jar
+
+      - name: 🚀 Restart app
+        run: |
+          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            cd ~/my-ktor-project
+            echo "🚀 Перезапуск приложения"
             docker-compose up -d --build
           EOF
