--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ktor CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,28 +6,26 @@ on:
   pull_request:
 
 jobs:
-
   build:
     name: 🔧 Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: 🛠 Set up JDK
-        uses: actions/setup-java@v3
+      - name: ☕ Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: 17
+          distribution: 'temurin'
 
-      - name: ✅ Make gradlew executable
-        run: chmod +x ./gradlew
+      - name: 🔨 Build shadowJar
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean shadowJar --no-daemon
 
-      - name: 🧪 Build app
-        run: ./gradlew clean shadowJar --no-daemon
-
-      - name: 📦 Upload artifact
+      - name: 📦 Upload JAR
         uses: actions/upload-artifact@v4
         with:
           name: ktor-app
@@ -42,40 +40,45 @@ jobs:
       postgres:
         image: postgres:15
         ports:
-          - "5432:5432"
+          - 5432:5432
         env:
           POSTGRES_DB: ${{ secrets.DB_NAME }}
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    env:
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      MEXC_API_KEY: ${{ secrets.MEXC_API_KEY }}
+      MEXC_SECRET_KEY: ${{ secrets.MEXC_SECRET_KEY }}
 
     steps:
-      - name: ⬇️ Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: 🧪 Set up JDK
-        uses: actions/setup-java@v3
+      - name: ☕ Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: 17
+          distribution: 'temurin'
 
-      - name: ✅ Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: 📄 Generate .env from template
+      - name: 📄 Generate .env for tests
         run: |
-          cp .env.template .env
-          sed -i "s|\$MEXC_API_KEY|${{ secrets.MEXC_API_KEY }}|g" .env
-          sed -i "s|\$MEXC_SECRET_KEY|${{ secrets.MEXC_SECRET_KEY }}|g" .env
-          sed -i "s|\$DB_HOST|postgres|g" .env
-          sed -i "s|\$DB_PORT|5432|g" .env
-          sed -i "s|\$DB_NAME|${{ secrets.DB_NAME }}|g" .env
-          sed -i "s|\$DB_USER|${{ secrets.DB_USER }}|g" .env
-          sed -i "s|\$DB_PASSWORD|${{ secrets.DB_PASSWORD }}|g" .env
+          echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" >> .env
+          echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
+          echo "DB_HOST=localhost" >> .env
+          echo "DB_PORT=5432" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
       - name: 🧪 Run tests
         run: ./gradlew test --no-daemon
@@ -90,11 +93,14 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: 📦 Download JAR
+      - name: 📦 Download JAR artifact
         uses: actions/download-artifact@v4
         with:
           name: ktor-app
-          path: .
+          path: app
+
+      - name: 📂 List downloaded JAR
+        run: ls -la app/
 
       - name: 🔐 Setup SSH
         run: |
@@ -103,7 +109,7 @@ jobs:
           chmod 600 ~/.ssh/deploy_key
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: 📄 Generate .env
+      - name: 📄 Generate .env for deploy
         run: |
           echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" >> .env
           echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
@@ -115,7 +121,7 @@ jobs:
 
       - name: 📤 Copy files to server
         run: |
-          scp -i ~/.ssh/deploy_key build/libs/*.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/my-ktor-project/app.jar
+          scp -i ~/.ssh/deploy_key app/*.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/my-ktor-project/crypto-backend-ktor.jar
           scp -i ~/.ssh/deploy_key .env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/my-ktor-project/.env
           scp -i ~/.ssh/deploy_key docker-compose.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/my-ktor-project/docker-compose.yml
 
@@ -123,10 +129,8 @@ jobs:
         run: |
           ssh -i ~/.ssh/deploy_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             cd ~/my-ktor-project
-
             echo "🛑 Останавливаем старые контейнеры"
             docker-compose down
-
             echo "🚀 Запускаем новые контейнеры"
             docker-compose up -d --build
           EOF
