--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,99 +1,120 @@
-name: Deploy Ktor App
+name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build:
+    name: 🔨 Build
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: ☕ Set up JDK
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Generate .env
-        run: |
-          cp .env.template .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" >> .env
-          echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
+      - name: 🔐 Set permissions for gradlew
+        run: chmod +x ./gradlew
 
-      - name: Build
-        run: |
-          chmod +x ./gradlew
-          ./gradlew clean build --no-daemon
+      - name: 🔨 Build shadowJar
+        run: ./gradlew clean shadowJar --no-daemon
+
+      - name: 📤 Upload jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: ktor-app
+          path: build/libs/*.jar
 
   test:
+    name: 🧪 Test
     runs-on: ubuntu-latest
     needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: ☕ Set up JDK
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Generate .env
+      - name: 🔐 Set permissions for gradlew
+        run: chmod +x ./gradlew
+
+      - name: 📄 Generate .env for tests
         run: |
           cp .env.template .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" >> .env
-          echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
+          sed -i "s|\$MEXC_API_KEY|${{ secrets.MEXC_API_KEY }}|g" .env
+          sed -i "s|\$MEXC_SECRET_KEY|${{ secrets.MEXC_SECRET_KEY }}|g" .env
+          sed -i "s|\$DB_HOST|${{ secrets.DB_HOST }}|g" .env
+          sed -i "s|\$DB_PORT|${{ secrets.DB_PORT }}|g" .env
+          sed -i "s|\$DB_NAME|${{ secrets.DB_NAME }}|g" .env
+          sed -i "s|\$DB_USER|${{ secrets.DB_USER }}|g" .env
+          sed -i "s|\$DB_PASSWORD|${{ secrets.DB_PASSWORD }}|g" .env
 
-      - name: Test
-        run: |
-          chmod +x ./gradlew
-          ./gradlew test --no-daemon
+      - name: 🧪 Run tests
+        run: ./gradlew test --no-daemon
 
   deploy:
+    name: 🚀 Deploy to server
     runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    needs: [test]
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.7.0
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 📦 Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ktor-app
+          path: build/libs
+
+      - name: 📄 Generate .env for deployment
+        run: |
+          cp .env.template .env
+          sed -i "s|\$MEXC_API_KEY|${{ secrets.MEXC_API_KEY }}|g" .env
+          sed -i "s|\$MEXC_SECRET_KEY|${{ secrets.MEXC_SECRET_KEY }}|g" .env
+          sed -i "s|\$DB_HOST|${{ secrets.DB_HOST }}|g" .env
+          sed -i "s|\$DB_PORT|${{ secrets.DB_PORT }}|g" .env
+          sed -i "s|\$DB_NAME|${{ secrets.DB_NAME }}|g" .env
+          sed -i "s|\$DB_USER|${{ secrets.DB_USER }}|g" .env
+          sed -i "s|\$DB_PASSWORD|${{ secrets.DB_PASSWORD }}|g" .env
+
+      - name: 🔑 Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Generate .env
+      - name: 📤 Upload files to server
         run: |
-          cp .env.template .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "MEXC_API_KEY=${{ secrets.MEXC_API_KEY }}" >> .env
-          echo "MEXC_SECRET_KEY=${{ secrets.MEXC_SECRET_KEY }}" >> .env
+          scp -o StrictHostKeyChecking=no -r \
+            build/libs/*.jar \
+            .env \
+            Dockerfile \
+            docker-compose.yml \
+            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/crypto-backend-ktor/
 
-      - name: Build Docker image
-        run: docker build -t ktor-app:latest .
-
-      - name: Copy files to server
+      - name: 🚀 SSH Deploy
         run: |
-          scp \
-            -o StrictHostKeyChecking=no \
-            docker-compose.yml .env \
-            ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/ktor-app
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            set -e
+            cd ~/crypto-backend-ktor
 
-      - name: Deploy
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'ENDSSH'
-          cd ktor-app
-          docker-compose down
-          docker-compose up -d --build
-          ENDSSH
+            echo "📦 Creating volume if not exists"
+            docker volume create pgdata
+
+            echo "🛑 Stopping old containers"
+            docker-compose down
+
+            echo "🚀 Starting new containers"
+            docker-compose up -d --build
+          EOF
