--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 📤 Upload jar
         uses: actions/upload-artifact@v4
         with:
-          name: ktor-app
+          name: crypto-backend-ktor
           path: build/libs/*.jar
 
   test:
