--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,49 @@
-version: '3.9'
+version: '3.8'
 
 services:
   postgres:
     image: postgres:15
-    container_name: postgres
     restart: always
-    ports:
-      - "5432:5432"
-    env_file:
-      - .env
+    environment:
+      POSTGRES_DB: $DB_NAME
+      POSTGRES_USER: $DB_USER
+      POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${DB_PORT}:5432"
+    networks:
+      - backend-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $DB_USER -d $DB_NAME"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
-  ktor-app:
+  crypto-backend:
     build: .
-    container_name: ktor-app
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
+    restart: always
+    environment:
+      DB_HOST: $DB_HOST
+      DB_PORT: $DB_PORT
+      DB_NAME: $DB_NAME
+      DB_USER: $DB_USER
+      DB_PASSWORD: $DB_PASSWORD
+      MEXC_API_KEY: $MEXC_API_KEY
+      MEXC_SECRET_KEY: $MEXC_SECRET_KEY
     env_file:
       - .env
-    restart: always
+    networks:
+      - backend-network
+
+networks:
+  backend-network:
+    driver: bridge
 
 volumes:
   postgres_data:
