--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,21 +11,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Устанавливаем JDK
+      # Устанавливаем JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Устанавливаем Docker и Docker Compose
-      - name: Install Docker and Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+      # Устанавливаем Docker и Docker Compose (официальные actions)
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v2
 
       # Генерируем .env файл из секретов
       - name: Create .env file
@@ -49,11 +47,11 @@ jobs:
 
       # Собираем Docker образ
       - name: Build Docker image
-        run: docker-compose build
+        run: docker compose build
 
       # Сохраняем образ в artifact
       - name: Save Docker image
-        run: docker save $(docker-compose images | awk 'NR==3 {print $2}') -o image.tar
+        run: docker save $(docker compose images | awk 'NR==3 {print $2}') -o image.tar
       - uses: actions/upload-artifact@v4
         with:
           name: docker-image
@@ -76,5 +74,5 @@ jobs:
             docker load -i image.tar
             
             # Запускаем приложение
-            docker-compose down
-            docker-compose up -d
+            docker compose down
+            docker compose up -d
