--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,14 +119,14 @@ jobs:
 
       - name: 📂 Create remote directory
         run: |
-          ssh -i ~/.ssh/deploy_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "mkdir -p F:/"
+          ssh -i ~/.ssh/deploy_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "mkdir -p F:\\"
 
       - name: 📤 Copy files to server
         run: |
-          scp -i ~/.ssh/deploy_key app/*.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:/my-ktor-project/crypto-backend-ktor.jar
-          scp -i ~/.ssh/deploy_key .env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:/my-ktor-project/.env
-          scp -i ~/.ssh/deploy_key docker-compose.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:/my-ktor-project/docker-compose.yml
-          scp -i ~/.ssh/deploy_key Dockerfile ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:/my-ktor-project/Dockerfile
+          scp -i ~/.ssh/deploy_key app/*.jar ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:\\my-ktor-project\\crypto-backend-ktor.jar
+          scp -i ~/.ssh/deploy_key .env ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:\\my-ktor-project\\.env
+          scp -i ~/.ssh/deploy_key docker-compose.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:\\my-ktor-project\\docker-compose.yml
+          scp -i ~/.ssh/deploy_key Dockerfile ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:F:\\my-ktor-project\\Dockerfile
 
       - name: 🐳 Create Docker Volume
         run: |
@@ -135,7 +135,7 @@ jobs:
       - name: 🚀 SSH Deploy
         run: |
           ssh -i ~/.ssh/deploy_key ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            cd ~/my-ktor-project
+            cd F:\\my-ktor-project
             echo "🛑 Останавливаем старые контейнеры"
             docker-compose down
             echo "🚀 Запускаем новые контейнеры"
